--- a/app/src/main/res/layout/fragment_main_screen.xml
+++ b/app/src/main/res/layout/fragment_main_screen.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.coronaapp.MainScreenViewModel"/>
+            type="com.example.coronaapp.Main.MainScreenViewModel"/>
     </data>
 
 
