--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,4 +21,4 @@
     <!--<androidx.fragment.app.FragmentContainerView-->
     <!--android:layout_width="match_parent"-->
     <!--android:layout_height="match_parent"-->
-    <!--android:name="com.example.coronaapp.MainScreenFragment"/>-->
+    <!--android:name="com.example.coronaapp.Main.MainScreenFragment"/>-->
