--- a/app/src/main/res/layout/fragment_main_screen.xml
+++ b/app/src/main/res/layout/fragment_main_screen.xml
@@ -70,7 +70,7 @@
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"></com.github.mikephil.charting.charts.PieChart>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/stay_home_text"
